code25_all/scala/15973819.txt
scala.collection.immutable.List
scala.collection.immutable.SortedMap
to
scala> List((1, "Fred"), (2, "Barney")).to[scala.collection.immutable.SortedMap]
<console>:10: error: scala.collection.immutable.SortedMap takes two type parameters, expected: one
              List((1, "Fred"), (2, "Barney")).to[SortedMap]
                                                  ^

to
